--- a/index.html
+++ b/index.html
@@ -121,20 +121,92 @@
       </section>
       <!-- super client section -->
       <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#cd8352] to-[#F00] px-16 py-24">
-         <div class="space-y-5">
-            <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
+         <div class="flex pr-28 items-center">
+            <div class="space-y-5">
+                <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
             <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even slightly believable. </p>
             <button class="btn btn-primary">Show All</button>
-         </div>
-         <div>
-            <!-- review -->
-            <div class="relative p-10 rounded-lg bg-white">
-                <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
-               <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-               <h4 class="font-bold mt-5">Ilham Yuda</h4>
-               <p class="font-medium">Businessman</p>
             </div>
          </div>
+         <!-- review container -->
+         <div class="relative">
+            <!-- next review -->
+            <div class="relative z-10 mb-16 opacity-40 p-10 rounded-lg bg-white">
+                <img class="absolute -top-5 -left-5 border-4 border-white rounded-full" src="images/client.png" alt="">
+               <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+               <h4 class="font-bold mt-5">llhamYuda</h4>
+               <p class="font-medium">Businessman</p>
+               <div class="flex justify-end">
+                <img src="images/circles.png" alt="">
+            </div>
+            </div>
+            <!--current review -->
+            <div class="absolute z-20 top-40 lg:-left-24 lg:w-[430px] p-10 rounded-lg bg-white">
+                <img class="absolute -top-5 -left-5 border-4 border-white rounded-full" src="images/client.png" alt="">
+               <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+               <h4 class="font-bold mt-5">llhamYuda</h4>
+               <p class="font-medium">Businessman</p>
+               <div class="flex justify-end">
+                <img src="images/circles.png" alt="">
+            </div>
+            </div>
+            <!--previous review -->
+            <div class="relative z-10 opacity-40 p-10 rounded-lg bg-white">
+                <img class="absolute -top-5 -left-5 border-4 border-white rounded-full" src="images/client.png" alt="">
+               <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+               <h4 class="font-bold mt-5">llhamYuda</h4>
+               <p class="font-medium">Businessman</p>
+               <div class="flex justify-end">
+                <img src="images/circles.png" alt="">
+            </div>
+            </div>
+         </div>
+      </section>
+      <!-- Events section -->
+      <section class="text-center my-24">
+        <h2 class="text-5xl font-extrabold mb-5">News & Events</h2>
+        <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even slightly believable. </p>
+        <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">    
+              <!-- First news cards -->
+            <div class="card border border-[#D2D2D2]">
+                    <figure class="px-10 pt-10">
+                      <img src="images/news-1.png" alt="Shoes" class="rounded-sm" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="card-actions">
+                        <button class="btn btn-primary">Learn More</button>
+                     </div>
+                    </div>
+                </div>
+              <!-- second news cards -->
+            <div class="card border border-[#D2D2D2]">
+                    <figure class="px-10 pt-10">
+                      <img src="images/news-2.png" alt="Shoes" class="rounded-sm" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="card-actions">
+                        <button class="btn btn-primary">Learn More</button>
+                     </div>
+                    </div>
+                </div>
+             <!-- third news cards -->
+            <div class="card border border-[#D2D2D2]">
+                    <figure class="px-10 pt-10">
+                      <img src="images/news-3.png" alt="Shoes" class="rounded-sm" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="card-actions">
+                        <button class="btn btn-primary">Learn More</button>
+                     </div>
+                  </div>
+        </div>
+
       </section>
     </main>
     <footer>
